--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,8 +14,30 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://db1uzmukbk5lb.cloudfront.net/K3mxKD4Jj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d3v04vdnqz6gui.cloudfront.net/E0ixKD4Jx"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>川普总统内阁成员名单</h2>
+<p>川普总统的内阁提名人目前正在由立法者审核并进行确认听证。以下是川普提名担任内阁职位的人选：</p>
+<p>? 皮特·赫格塞斯（Pete Hegseth） — 川普提名的国防部长（Defense Secretary）<br />
+? 图尔西·加巴德（Tulsi Gabbard） — 川普提名的国家情报局局长（Director of National Intelligence）<br />
+? 卡什·帕特尔（Kash Patel） — 川普提名的联邦调查局局长（FBI Director）<br />
+? 约翰·拉特克利夫（John Ratcliffe） — 川普提名的中央情报局局长（CIA Director）<br />
+? 伊丽丝·斯特凡尼克（Elise Stefanik） — 川普提名的联合国大使（Ambassador to the United Nations）<br />
+? 斯科特·贝森特（Scott Bessent） — 川普提名的财政部长（Treasury Secretary）<br />
+? 霍华德·卢特尼克（Howard Lutnick） — 川普提名的劳工部长（Labor Secretary）<br />
+? 马可·卢比奥（Marco Rubio） — 川普提名的国务卿（Secretary of State）<br />
+? 克里斯蒂·诺姆（Kristi Noem） — 川普提名的国土安全部长（Secretary of Homeland Security）<br />
+? 帕姆·邦迪（Pam Bondi） — 川普提名的司法部长（Attorney General）<br />
+? 肖恩·达菲（Sean Duffy） — 川普提名的运输部长（Transportation Secretary）<br />
+? 克里斯·赖特（Chris Wright） — 川普提名的能源部长（Energy Secretary）<br />
+? 罗素·沃特（Russell Vought） — 川普提名的预算办公室主任（Director of the Office of Management and Budget）<br />
+? 道格·伯格姆（Doug Burgum） — 川普提名的内政部长（Secretary of the Interior）<br />
+? 李·泽尔丁（Lee Zeldin） — 川普提名的环境保护署署长（Environmental Protection Agency Administrator）<br />
+? 斯科特·特纳（Scott Turner） — 川普提名的住房和城市发展部长（Housing and Urban Development Secretary）<br />
+? 道格·柯林斯（Doug Collins） — 川普提名的退伍军人事务部长（Secretary of the Department of Veterans Affairs）<br />
+? 小罗伯特·F·肯尼迪（Robert F. Kennedy Jr.） — 川普提名的健康与公共服务部长（Secretary of Health and Human Services）<br />
+? 琳达·麦克马洪（Linda McMahon） — 川普提名的教育部长（Secretary of Education）</p>
+<p>这些提名人选将在完成审核和确认程序后，正式成为川普政府的内阁成员，协助推动政府各项政策和目标的实现。</p>
 <h2>拜登：我们将离开办公室 但不会退出斗争</h2>
 <p>美国前总统乔·拜登（Joe Biden）刚在安德鲁斯联合基地（Joint Base Andrews）发表了他作为前总统的首次简短告别演说，之后他与吉尔·拜登（Jill Biden）将飞往加利福尼亚州。</p>
 <p>他表示，川普的就职演说显示“我们还有很多事情要做”，并试图鼓励支持者参与政治行动。</p>
@@ -206,14 +228,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418210.md#1">川普就职演讲 解释为何要收回巴拿马运河</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418194.md#1">川普就职首条白宫新闻稿 阐述美国优先政纲</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418195.md#1">川普就职演说 聚焦十大主题</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418206.md#1">川普重返白宫给加密货币带来强劲发展势头</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418187.md#1">组图：川普宣誓就任美国第47任总统</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank">303万人举报江泽民</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/6/n9810260.md#1" target="_blank">林辉：诸葛亮遗迹被毁 责任者江青秘书遭劫</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/2/8/n10127794.md#1" target="_blank">豪门女总裁的私人生活</a></li><hr>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/11/15/n9842766.md#1" target="_blank">围墙不是永久景观——从柏林墙说起</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/3/16/n11118029.md#1" target="_blank">阿肯色州参议院通过决议案 制止中共强摘器官</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
