--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,8 +14,11 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1fejrztdgsube.cloudfront.net/U2sxKD4Jj"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://dsqxb3b7muii1.cloudfront.net/U7qxKD4Jy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>川普出席国会午宴 政商领袖齐聚一堂</h2>
+<p>美国总统唐纳德·川普（特朗普）出席了国会午宴，与会者包括国会议员、内阁提名人以及川普核心圈内的商界巨头。坐在川普身旁的是第一夫人梅拉尼娅·川普（Melania Trump）和联合国会就职典礼委员会主席、参议员艾米·克洛布查（Amy Klobuchar）。</p>
+<p>这场午宴为重要人士提供了一个与政府官员交流并推进核心政策优先事项的机会。苹果公司CEO蒂姆·库克（Tim Cook）被看到坐在小唐纳德·川普（Donald Trump Jr.）与参议院少数党领袖查克·舒默（Chuck Schumer）之间。</p>
 <h2>川普总统内阁成员名单</h2>
 <p>川普总统的内阁提名人目前正在由立法者审核并进行确认听证。以下是川普提名担任内阁职位的人选：</p>
 <p>? 皮特·赫格塞斯（Pete Hegseth） — 川普提名的国防部长（Defense Secretary）<br />
@@ -228,14 +231,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418266.md#1">全球领导人纷纷祝贺川普就任美国总统</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418148.md#1">组图：贺锦丽夫妇在白宫欢迎万斯夫妇</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418210.md#1">川普就职演讲 解释为何要收回巴拿马运河</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418194.md#1">川普就职首条白宫新闻稿 阐述美国优先政纲</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418195.md#1">川普就职演说 聚焦十大主题</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/20/3/7/n11922778.md?dfh#1" target="_blank">了解法轮功：见证奇迹 解开生命奥秘</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/9/n10770724.md#1" target="_blank">裴毅然：毛泽东真诚“感谢皇军”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/8/10/25/n2308544.md#1" target="_blank">中国人想问又不敢问的法轮功问题解答</a></li><hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/4/18/n11196766.md#1" target="_blank">【征文】张东园：中国国学大师的血泪遭遇(2)</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/16/10/12/n8391689.md#1" target="_blank">一个江湖亡命汉的不绝之命</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
