--- a/gb/25/1/19/n14416866.md
+++ b/gb/25/1/19/n14416866.md
@@ -14,8 +14,25 @@
 <p>川普誓言推动具变革性的“美国优先”政策，他的施政方向将牵动全球政治和经济格局。周一的重点集中在总统就职演讲，以及上任首日签署的行政令上。</p>
 <p>周日（1月19日），川普表示，作为总统，他将在本周末首次出访，前往加州视察洛杉矶山火灾造成的损失。</p>
 <p>“我想向所有受加州山火影响的人表达我们的关怀。”川普说，“我将于周五去那里看一看，让它恢复正常。”</p>
-<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://dycmgeziwp90b.cloudfront.net/N5xxKD4Jn"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
+<p><a title="川普总统就职典礼 英文新唐人特别直播 （即时翻译字幕）LIVE #川普就职舞会 #新唐人电视台 1/20/2025" width="640" b="480" src=""></a><a href="https://d1qenr1x5ix28c.cloudfront.net/E9yxKD4Jy"><img width="600" src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youtube.com/embed/WQPM5zvSbFM?feature=oembed" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></a></p>
 <h2>以下是川普就职典礼的更新：</h2>
+<h2>川普参加首次荣誉仪式</h2>
+<p>美国总统唐纳德·川普（特朗普）参加了首次荣誉仪式，该仪式的参与者包括来自宾夕法尼亚州巴特勒（Butler, Pennsylvania）的急救人员代表。</p>
+<p>这项仪式是总统就职典礼传统的一部分，充分展示了美国军队的范围和规模，并具有象征性的意义，对美国总统而言尤为重要。</p>
+<h2>参议院多数党领袖将于周二与川普在白宫会面</h2>
+<p>参议院多数党领袖约翰·图恩（John Thune）告诉CNN，他计划于明天与美国总统唐纳德·川普（特朗普）在白宫会面。</p>
+<p>“我们计划进行这次会谈。”图恩表示，目前仍在敲定今晚哪些内阁提名人将获得确认，但普遍预计马可·卢比奥（Marco Rubio）将被确认为国务卿（Secretary of State）。</p>
+<h2>巴勒斯坦自治政府主席祝贺川普就任美国总统</h2>
+<p>巴勒斯坦自治政府主席马哈茂德·阿巴斯（Mahmoud Abbas）于周一向美国总统唐纳德·川普（特朗普）表达祝贺，并表示巴勒斯坦自治政府“准备与川普合作”，以“在两国方案的指导下实现和平”。</p>
+<p>根据其办公室的声明，阿巴斯表示，“这一愿景旨在建立巴勒斯坦国和以色列国，两国和平共处，并实现安全。”</p>
+<p>在川普的第一任期内，他的政府曾提出一项两国方案的版本，主要迎合以色列的关切。该计划保留了被占领的西岸地区的许多犹太人定居点，赋予以色列对约旦河谷的主权，并为巴勒斯坦提供靠近埃及边境的沙漠土地。</p>
+<p>当时，阿巴斯称这一计划是“世纪之辱”。</p>
+<h2>意大利总理祝贺川普出任美国总统</h2>
+<p>意大利总理乔治亚·梅洛尼（Giorgia Meloni）周一在出席唐纳德·川普（特朗普）就职典礼后，向他表示祝贺。</p>
+<p>梅洛尼在X平台上发文说，“我确信，我们国家之间的友谊以及将我们联系在一起的价值观，将继续加强意大利与美国之间的合作，携手应对全球挑战，为我们的人民构建一个繁荣与安全的未来。”</p>
+<p>梅洛尼表示，意大利将“始终致力于巩固欧洲与美国之间的对话”。</p>
+<p>梅洛尼是受邀参加川普就职典礼的多位世界领袖之一，她与阿根廷总统哈维尔·米莱（Javier Milei）相邻而坐。</p>
+<p>本月早些时候，梅洛尼曾在佛罗里达州棕榈滩的海湖庄园（Mar-a-Lago）与川普会面。</p>
 <h2>川普将退出《巴黎气候协定》</h2>
 <p>川普政府宣布，美国将退出《巴黎气候协定》（Paris climate agreement）。该协定由几乎所有国家签署，旨在减少排放并将全球平均气温的增幅控制在工业化前水平以下。</p>
 <p>这是美国第二次退出2015年的协定。川普在其第一任期内曾退出该协定，但拜登政府于2021年重新加入。2015年，近200个国家承诺努力防止全球气温比19世纪后期（工业化前水平）上升超过1.5摄氏度，这是该协定的核心目标。</p>
@@ -251,14 +268,13 @@
 <p>四年前总统拜登在就职首日创下签署17个行政令的纪录，而川普很可能会打破这一纪录，创造新高。</p>
 <p>责任编辑：林妍#</p>
 	
-
 <strong>相关新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/15/n14414310.md#1">川普就职典礼在即 七大要点一文看懂</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418097.md#1">【名家专栏】川普2.0强势登台 中共如何应对</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418283.md#1">川普将发布备忘录 审查与中国等贸易关系</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418266.md#1">全球领导人纷纷祝贺川普就任美国总统</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418148.md#1">组图：贺锦丽夫妇在白宫欢迎万斯夫妇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/20/n14418210.md#1">川普就职演讲 解释为何要收回巴拿马运河</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank">揭开活摘器官黑幕</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/4/27/n10343446.md#1" target="_blank">刘白：晚清张謇的幻想</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/2/24/n3807816.md#1" target="_blank">飞瀑：迫害法轮功 中共偷偷摸摸作恶何其多？</a></li><hr>
+<li><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank">永恒的见证</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/1/28/n10094168.md#1" target="_blank">如初：再回顾民国学人批苏俄</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/10/12/n11583426.md#1" target="_blank">悉尼女律师：修炼让我找到了人生意义</a></li><hr>
 <strong>热门新闻：</strong>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/3/n14405103.md#1">稀奇古怪的转生故事二则：人未死魂已转生猪 死后变猪又回到人身</a></li>
 <li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/16/n14414547.md#1">前美军特种兵曝曾在地下设施见过外星科技</a></li>
